--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <h1>GitHub Pages</h1>
   <p>
-    Pagina di esempio pratico per creare pagine web su GitHub.
+    Pagina di esempio pratico per creare pagine web su GitHub. Viene tenuto il dominio "icobasco.github.io", con a seguire il nome del progetto.
   </p>
 </html>
